k8s/network/networking.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-source
  labels:
    app: source
spec:
  containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-destination #172.17.0.5
  labels:
    app: destination
spec:
  containers:
  - name: nginx
    image: nginx
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-1
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: destination
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
      - ipBlock:
          cidr: 172.17.0.0/16
          except:
            - 172.17.1.0/24
      - namespaceSelector:
          matchLabels:
            project: myproject
      - podSelector:
          matchLabels:
            role: frontend
    ports:
      - protocol: TCP
        port: 6379
  egress:
---
apiVersion: v1
kind: Service
metadata:
  name: source-svc
spec:
  selector:
    app: source
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
